# quant-forecast

./: .gitignore  Dockerfile  config.py  docker-compose.yml  log.txt  main.py  pyproject.toml  readme.md
src/analysis/: i_analysis.py  indicator_calculator.py  prophet_analysis.py  statistical_analysis.py  strategy_evaluator.py  volatility_analysis.py
src/data/: crypto_data_fetcher.py  data_fetcher.py  data_preparation.py
src/data/fetcher/: crypto_data_fetcher.py  data_fetcher.py  i_data_fetcher.py  options_fetcher.py
src/data/models/: model.py
src/optimization/: data_granularity_checker.py  data_preparation.py  hyperparameter_optimization.py
src/plotting/: plotter.py
src/reporting/: analysis_utils.py  generate_report.py  i_reporter.py  pdf_report.py
src/utils/: file_manager.py
