[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["Matheus Cardoso <matheuscbsmsn1994@gmail.com>"]
readme = "README.md"
packages = [{include = "machine_learning"}]

[tool.poetry.dependencies]
python = ">=3.8,<=3.9"
prophet = "^1.1.5"
seaborn = "^0.11.0"
numpy = "^1.20.0"
scipy = "^1.5.4"
optuna = "^3.5.0"
arch = "^4.15"
pandas = "^1.1.5"
yfinance = "^0.2.37"
matplotlib = "^3.4.0"
reportlab = "^4.1.0"
mplfinance = "^0.12.10b0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
