[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["Matheus Cardoso <matheuscbsmsn1994@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9"
prophet = "^1.1.5"
seaborn = "^0.12.0"
numpy = "^1.20.0"
scipy = "^1.5.4"
optuna = "^3.5.0"
arch = "^5.0"
pandas = ">=2.0"
yfinance = "^0.2.37"
matplotlib = "^3.4.0"
reportlab = {version = "^4.1.0", python = "<4"}
mplfinance = "^0.12.10b0"
mongoengine = "^0.28.2"
psutil = "^6.0.0"
dask = "^2024.7.1"
distributed = "^2024.7.1"
ccxt = "^4.3.68"
dask-expr = "^1.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
